<resources>
    <string name="app_name">Parcours Univ</string>
    <string name="login">Se connecter</string>
    <string name="save_career">Enregistrer le parcours</string>
    <string name="responsible_teacher">Responsable</string>
    <string name="intervening_teacher">Intervenants</string>
    <string name="server_connection_error">Echec de la connexion avec le serveur.</string>
    <string name="bad_credentials">Email ou mot de passe incorrect</string>
    <string name="unexpected_http_status">Une erreur est survenue</string>
    <string name="standard_exception">Une erreur est survenue</string>
    <string name="double_click_for_exit">Cliquez une deuxième fois pour quitter l\'application</string>
    <string name="login_error_missing_email">Email non renseigné.</string>
    <string name="login_error_missing_password">Mot de passe non renseigné.</string>
    <string name="login_error_bad_email">Email invalide.</string>
    <string name="login_error_bad_password">Mot de passe invalide.</string>
    <string name="last_name">Nom</string>
    <string name="name">Prénom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="title_teaching_unit_detail">TeachingUnit_Detail</string>
    <string name="title_teaching_unit_list">TeachingUnits</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_title">Search Title</string>
    <string name="action_search_title">Action Search Title</string>
    <string name="not_registered">Pas encore inscrit ?</string>
    <string name="register">S\'enregistrer</string>
    <string name="remember_me">Se souvenir de moi ?</string>
    <string name="search_no_teachingunit_found">Aucune UE trouvée</string>

    <string name="register_name_missing_error">Prénom non renseigné.</string>
    <string name="register_lastname_missing_error">Nom non renseigné.</string>
    <string name="register_email_missing_error">Email non renseigné.</string>
    <string name="register_password_missing_error">Mot de passe non renseigné.</string>
    <string name="register_confirm_password_missing_error">Confirmer le mot de passe non renseigné</string>

    <string name="register_lastname_length_error">Votre nom doit contenir entre 2 et 49 caractères</string>
    <string name="register_name_length_error">Votre prénom doit contenir entre 2 et 49 caractères</string>
    <string name="register_email_length_error">Votre email doit contenir moins de 49 caractères</string>
    <string name="register_password_length_error">Le mot de passe doit contenir entre 5 et 49 caractères</string>
    <string name="register_confirm_password_length_error">Le mot de passe doit contenir entre 5 et 49 caractères</string>
    <string name="register_not_matching_passwords_error">Les mots de passe ne correspondent pas</string>
    <string name="register_bad_email_error">Email incorrect</string>

    <string name="nom_parcours">Nom du parcours choisi:</string>
    <string name="online">Rendre le parcours public ?</string>
    <string name="validation">Valider</string>
    <string name="newcourse_missing_name">Nom non choisi</string>
    <string name="signin">Se connecter</string>
    <string name="signup">Créer compte</string>
    <string name="already_member">Déjà membre?</string>
    <string name="export_title">Exporter</string>
    <string name="export_by_txt">Exporter en txt</string>
    <string name="export_by_pdf">Exporter en PDF</string>
    <string name="export_by_email">Exporter par mail</string>
    <string name="home_create_career">Créer parcours</string>
    <string name="home_edit_main_career">Editer parcours principal</string>
    <string name="home_display_main_career">Parcours principal</string>
    <string name="home_display_all_career">Mes parcours</string>
    <string name="home_display_public_career">Parcours publics</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="default_career_name">Mon parcours</string>
    <string name="unexpected_error">Une erreur est survenue</string>
    <string name="edit_career">Editer</string>
</resources>